// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders as expected whith useCommitApi returning api values [ [Object] ], error null 1`] = `
<DocumentFragment>
  <div
    class="commit-history-container"
  >
    <ul
      class="commit-list-container"
    >
      <li
        class="commit-item"
      >
        <h4>
          commit message
        </h4>
        <div
          class="additional-info-container"
        >
          <img
            alt="avatar for some name"
            class="additional-info-image"
            src="www.avatar.com"
          />
          <div
            class="additional-info-content"
          >
            <span
              class="author-message"
            >
              some name
            </span>
            <span>
              4 months ago
            </span>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`App renders as expected whith useCommitApi returning api values [], error 403 1`] = `
<DocumentFragment>
  <div
    class="commit-history-container"
  >
    <p>
      Error with status 403
    </p>
  </div>
</DocumentFragment>
`;

exports[`App renders as expected whith useCommitApi returning api values [], error 404 1`] = `
<DocumentFragment>
  <div
    class="commit-history-container"
  >
    <p>
      Error with status 404
    </p>
  </div>
</DocumentFragment>
`;

exports[`App renders as expected whith useCommitApi returning api values [], error null 1`] = `
<DocumentFragment>
  <div
    class="commit-history-container"
  />
</DocumentFragment>
`;
